--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
