--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
     "next": "14.1.0",
+    "postmark": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
