--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^3.3.1",
+    "draft-js": "^0.11.7",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "postmark": "^4.0.2",
